deployments/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evalio-client
  labels:
    app: evalio-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evalio-client
  template:
    metadata:
      labels:
        app: evalio-client
    spec:
      containers:
        - name: evalio-client
          image: evalio-client:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: "0.1"
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: evalio-client-service
  labels:
    app: evalio-client
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: evalio-client
  type: ClusterIP
